# model-runner

./: .gitignore  AGENTS.md  README.md  alex.py  backend-down-bg  backend-up-bg  chat.py  config_utils.py  expand  ollama_chat.py  pyproject.toml  requirements.txt  runner.py  tui.py  tui_chat.py  vllm-down  vllm-up  vllm-up-bg
config/: machine.example.toml
docs/: README.md  dashboard_repo_architecture.md  entrypoints.md  exl2_setup.md  kv_quant_w_compressor  memory_options.md  observability_dashboard  onboarding-standards.md  tuning.md
docs/audits/: 0001-hide-think.md  0002-exllamav2-examples-chat-findings.md  0003-standardization.md  0004_tui_logging.md  README.md
docs/debugging/: outputs  temp
docs/decisions/: 0001-model-notes.md  0002-generation-parameters-scope.md  0003-change-control.md  0004-backend-separation.md  0004-docs-organization.md  0005-config-profiles.md  0006-backend-model-folders.md  0006-streaming-and-think-filtering.md  0007-model-first-models-folder.md  0008-tui-follow-state-machine.md  0009-tui-slash-commands.md  0010-reviews-branch-mirror.md  0011-toml-config-and-machine-overrides.md  0012-store-upstream-model-cards.md  0013-openai-backend-naming-and-targets.md  0014-status-and-show-command-ux.md  0015-token-accounting-and-metrics.md  0016-observability-boundary-and-external-dashboard.md  (+2 more)
models/: README.md
scripts/: backend_ctl.py  expand_transcript.py  model  openai_compat_smoke.py
tests/: test_telemetry.py
tui_app/: app.py  context_policy.py  events.py  history_control.py  knobs.py  log_file.py  telemetry.py  think_router.py
(+106 files in other folders)
